Margin left, not width, will fix spacing issues.

--- a/app/assets/stylesheets/cuirator.scss
+++ b/app/assets/stylesheets/cuirator.scss
@@ -30,5 +30,5 @@ footer.site-footer a {
 }
 
 .dl-horizontal dd {
-  width: 190px;
+  margin-left: 190px;
 }
